# 3-python-package-super-package

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml
.github/workflows/: Pipfile  python-package.yml  python-tests.yml
SuperTask_new/: __init__.py  tasks.py
ZephyrTask/: __init__.py  tasks.py
examples/: example_usage.py
pytask_new/: __init__.py
superTask/: __init__.py  tasks.py
tests/pytask/: test_tasks.py
tests/taskTest/: __init__.py  test_tasks.py
